tests/fail/nightly/missing_trait_from_str.stderr
error[E0277]: the trait bound `NoFromStr: FromScanf<'_>` is not satisfied
 --> tests/fail/nightly/missing_trait_from_str.rs:9:33
  |
9 |     sscanf::sscanf!("hi", "{}", module::NoFromStr);
  |                                 ^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `FromStr` is not implemented for `NoFromStr`
 --> tests/fail/nightly/missing_trait_from_str.rs:2:5
  |
2 |     pub struct NoFromStr;
  |     ^^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `FromStr`:
            ByteString
            CString
            FullF32
            FullF64
            HexNumber
            IpAddr
            Ipv4Addr
            Ipv6Addr
          and $N others
  = note: required for `NoFromStr` to implement `FromScanf<'_>`

error[E0277]: the trait bound `NoFromStr: FromScanf<'_>` is not satisfied
  --> tests/fail/nightly/missing_trait_from_str.rs:10:29
   |
10 |     sscanf::sscanf!("hi", "{module::NoFromStr}");
   |                             ^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromStr` is not implemented for `NoFromStr`
  --> tests/fail/nightly/missing_trait_from_str.rs:2:5
   |
 2 |     pub struct NoFromStr;
   |     ^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `FromStr`:
             ByteString
             CString
             FullF32
             FullF64
             HexNumber
             IpAddr
             Ipv4Addr
             Ipv6Addr
           and $N others
   = note: required for `NoFromStr` to implement `FromScanf<'_>`

error[E0277]: the trait bound `NoFromStr: FromScanf<'_>` is not satisfied
  --> tests/fail/nightly/missing_trait_from_str.rs:12:33
   |
12 |     sscanf::sscanf!("hi", "{}", NoFromStr);
   |                                 ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromStr` is not implemented for `NoFromStr`
  --> tests/fail/nightly/missing_trait_from_str.rs:2:5
   |
 2 |     pub struct NoFromStr;
   |     ^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `FromStr`:
             ByteString
             CString
             FullF32
             FullF64
             HexNumber
             IpAddr
             Ipv4Addr
             Ipv6Addr
           and $N others
   = note: required for `NoFromStr` to implement `FromScanf<'_>`

error[E0277]: the trait bound `NoFromStr: FromScanf<'_>` is not satisfied
  --> tests/fail/nightly/missing_trait_from_str.rs:13:29
   |
13 |     sscanf::sscanf!("hi", "{NoFromStr}");
   |                             ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromStr` is not implemented for `NoFromStr`
  --> tests/fail/nightly/missing_trait_from_str.rs:2:5
   |
 2 |     pub struct NoFromStr;
   |     ^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `FromStr`:
             ByteString
             CString
             FullF32
             FullF64
             HexNumber
             IpAddr
             Ipv4Addr
             Ipv6Addr
           and $N others
   = note: required for `NoFromStr` to implement `FromScanf<'_>`
